--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -126,6 +126,26 @@ p {
             margin-bottom: 0px;
         }
     }
+.skillset {
+    .item {
+        margin-bottom: 15px;
+        overflow: hidden;
+    }
+    .level-title {
+        font-size: 14px;
+        margin-top: 0;
+        margin-bottom: 12px;
+    }
+    .level-bar {
+        height: 12px;
+        background: $smoky-white;
+    }
+    .level-bar-inner {
+        height: 12px;
+        background: lighten($theme-color, 15%);
+    }
+}
+
     .languages-container {
         .lang-desc {
             color: rgba(256, 256, 256, 0.6);
