--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -171,7 +171,7 @@ p {
         margin-bottom: 60px;
     }
 
-    .experiences-section, .educations-section {
+    .experiences-section, .training-section, .educations-section {
         .item {
             margin-bottom: 30px;
         }
