--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -181,7 +181,7 @@ p {
         overflow: hidden;
         margin-bottom: 2px;
     }
-    .job-title, .degree {
+    .job-title, .job-title,.degree {
         color: $text-color;
         font-size: 16px;
         margin-top: 0;
@@ -194,7 +194,7 @@ p {
         top: 0;
         color: $text-grey;
     }
-    .company, .university {
+    .company,.company, .university {
         margin-bottom: 10px;
         color: $text-grey;
     }
