--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -171,7 +171,7 @@ p {
         margin-bottom: 60px;
     }
 
-    .experiences-section, .trainings-section, .educations-section {
+    .experiences-section, .educations-section {
         .item {
             margin-bottom: 30px;
         }
@@ -181,7 +181,7 @@ p {
         overflow: hidden;
         margin-bottom: 2px;
     }
-    .job-title, .job-title,.degree {
+    .job-title, .degree {
         color: $text-color;
         font-size: 16px;
         margin-top: 0;
@@ -194,7 +194,7 @@ p {
         top: 0;
         color: $text-grey;
     }
-    .company,.company, .university {
+    .company, .university {
         margin-bottom: 10px;
         color: $text-grey;
     }
@@ -205,6 +205,15 @@ p {
         margin-top: 0;
         margin-bottom: 5px;
 	color: darken($theme-color, 15%);
+    }
+
+    .trainings-section {
+        .intro {
+            margin-bottom: 30px;
+        }
+        .item {
+            margin-bottom: 15px;
+        }
     }
     .projects-section {
         .intro {
