--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -199,14 +199,13 @@ p {
         color: $text-grey;
     }
 
-    .project-title {
+    .training-title {
         font-size: 16px;
         font-weight: 400;
         margin-top: 0;
         margin-bottom: 5px;
 	color: darken($theme-color, 15%);
     }
-
     .trainings-section {
         .intro {
             margin-bottom: 30px;
@@ -215,6 +214,14 @@ p {
             margin-bottom: 15px;
         }
     }
+    .project-title {
+        font-size: 16px;
+        font-weight: 400;
+        margin-top: 0;
+        margin-bottom: 5px;
+	color: darken($theme-color, 15%);
+    }
+
     .projects-section {
         .intro {
             margin-bottom: 30px;
