--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -152,6 +152,16 @@ p {
             }
         }
     }
+
+    .keywords-list {
+        margin-bottom: 0;
+        li {
+            margin-bottom: 10px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
 }
 
 .main-wrapper {
